python/testData/highlighting/matchStatementBefore310.py
<error descr="Python version 3.9 does not support match statements"><info descr="null">match</info></error> 42:
    <info descr="null">case</info> 42:
        pass
